# calibration-gap-semantic-caching

./: .gitignore  README.md  pyproject.toml
src/analysis/: analyze_cls.py  analyze_distribution.py  analyze_latency.py  compute_calibration.py  plot_paper_curves.py  util.py
src/eval/: eval_reranker.py  retrieve_rerank_evaluator.py
src/reranker/: cache_evaluator.py  finetune_colbert.py  finetune_crossencoder.py  util.py
src/sentencepairs/: create_sentencepairs_v1.py  create_sentencepairs_v2.py  create_sentencepairs_v3.py
src/shell/: run_reranker_evals.sh  run_reranker_evals_for_retriever.sh
src/slurm/: compute_calibration.slurm  finetune_colbert.slurm  run_cls_analysis.slurm  run_distribution_analysis.slurm  run_latency_analysis.slurm  run_reranker_evals.slurm  run_reranker_evals_array.slurm
