[project]
name = "calibration-gap-semantic-caching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "datasets>=4.6.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.16.4",
    "matplotlib>=3.10.8",
    "ninja>=1.11.1.4",
    "pylate>=1.4.0",
    "redisvl>=0.15.0",
    "rich>=14.3.3",
    "torch>=2.9.0",
    "wandb>=0.25.1",
    "xformers>=0.0.33.post1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]
