[project]
name = "calibration-gap-semantic-caching"
version = "0.1.0"
description = "Code accompanying the paper 'Closing the Calibration Gap in Semantic Caching': cache-aware evaluation of semantic-cache re-rankers, including the Redis LangCache Embed and Re-ranker models, using Precision-Cache Hit Ratio (P-CHR) AUC and Calibration Retention Rate, plus sentence-pair dataset curation and analysis of score calibration, score distributions, and latency."
authors = [
    { name = "Aditeya Baral", email = "aditeyabaral@nyu.edu" },
    { name = "Radoslav Ralev", email = "radoslav.ralev@redis.com" },
    { name = "Iliya Sotirov Zhechev", email = "iliya.zhechev@redis.com" },
    { name = "Srijith Rajamohan", email = "srijith.rajamohan@redis.com" },
    { name = "Jen Agarwal", email = "jen.agarwal@redis.com" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "datasets>=4.6.1",
    "einops>=0.8.2",
    "huggingface-hub>=1.16.4",
    "matplotlib>=3.10.8",
    "ninja>=1.11.1.4",
    "pylate>=1.4.0",
    "redisvl>=0.15.0",
    "rich>=14.3.3",
    "torch>=2.9.0",
    "wandb>=0.25.1",
    "xformers>=0.0.33.post1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]
